# C1-VAESDE-ADSB-PREPROCESSING

./: .gitignore  README.md  preprocess_01_concat_daily.py  preprocess_02_filter_ga_aircraft.py  preprocess_03_filter_sort_daily.py  preprocess_04_generate_trajectories.py  preprocess_05_convert_segments_to_enu.py  preprocess_06_clean_enu_velocity_outliers.py  preprocess_07_split_train_test_by_segment.py  preprocess_08_make_sequence_dataset.py  pyproject.toml
configs/: pipeline.yaml
scripts/: run_dataset.py  run_ingest.py  run_pipeline.py
src/adsb_preprocess/: __init__.py  cleaning.py  dataset.py  enu.py  filters.py  geo.py  ingest.py  io_utils.py  pipeline.py  sequences.py  splitting.py  trajectories.py
tests/: test_smoke.py
